Fix bug that prevents navbar from moving, fixed layout issue on algo visualizer

--- a/src/styles.css
+++ b/src/styles.css
@@ -858,7 +858,7 @@ footer {
   }
 
   .scroll-window {
-    min-height: calc(83vh - var(--nav-height));
+    min-height: calc(88vh - var(--nav-height));
   }
 
   .flip-card:hover .flip-card-inner {
